--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     image: postgres:13
     restart: always
     environment:
-      POSTGRES_USER=outline
-      POSTGRES_PASSWORD=outlinepass
-      POSTGRES_DB=outline
+      POSTGRES_USER: outline
+      POSTGRES_PASSWORD: outlinepass
+      POSTGRES_DB: outline
     volumes:
       - ./pgdata:/var/lib/postgresql/data
 
